crates/mtui-testreport/tests/snapshots/it__ingest__ingest_golden_SUSE_Maintenance_46572_423943.snap
---
source: crates/mtui-testreport/tests/ingest.rs
expression: projection(report.base())
---
rrid: Some(RequestReviewID { project: "SUSE", kind: Maintenance, maintenance_id: "46572", review_id: 423943 })
realid: Some("SUSE:Maintenance:46572:423943")
packager: "someone@suse.com"
rating: Some("important")
category: "security"
repository: "http://download.suse.de/ibs/SUSE:/Maintenance:/46572/"
products: ["SLE-Module-Containers 15-SP7 (aarch64, x86_64)", "SLE-Module-Development-Tools-OBS 15-SP7 (x86_64)"]
testplatforms: ["base=SLE_HPC(major=15,minor=SP7);arch=[aarch64,x86_64];addon=sle-module-containers(major=15,minor=SP7)", "base=SLE_RT(major=15,minor=SP7);arch=[aarch64,x86_64];addon=sle-module-containers(major=15,minor=SP7)", "base=SLES(major=15,minor=SP7);arch=[aarch64,x86_64];addon=sle-module-containers(major=15,minor=SP7)", "base=SLES(major=15,minor=SP7);arch=[x86_64];addon=sle-module-development-tools-obs(major=15,minor=SP7)", "base=SLES_SAP(major=15,minor=SP7);arch=[aarch64,x86_64];addon=sle-module-containers(major=15,minor=SP7)"]
giteapr: None
giteaprapi: None
giteacohash: None
update_source: Obs
slack_review: None
reviewer: ""
repositories: []
hostnames: []
bugs: [("1248946", "VUL-0: CVE-2025-58058: containerized-data-importer: github.com/ulikunitz/xz: github.com/ulikunitz/xz leaks memory"), ("1262952", "VUL-0: CVE-2026-34986: containerized-data-importer: github.com/go-jose/go-jose/v3:  crafted JWE input with a missing encrypted key can lead to a denial of service"), ("1265799", "VUL-0: CVE-2026-33814: containerized-data-importer: golang.org/x/net/http2: infinite loop in HTTP/2 transport when given bad SETTINGS_MAX_FRAME_SIZE"), ("1266179", "VUL-0: CVE-2026-39827,CVE-2026-39834,CVE-2026-39828,CVE-2026-39829,CVE-2026-39831,CVE-2026-42508,CVE-2026-39833,CVE-2026-39830,CVE-2026-39832,CVE-2026-46597,CVE-2026-46598,CVE-2026-46595,CVE-2026-39835: containerized-data-importer: golang.org/x/crypto/ssh"), ("1266639", "VUL-0: CVE-2026-39821: containerized-data-importer: golang.org/x/net/idna: failure to reject ASCII-only Punycode-encoded labels allows for validation bypass and privilege escalation"), ("1267176", "VUL-0: CVE-2026-25680,CVE-2026-42502,CVE-2026-27136,CVE-2026-25681,CVE-2026-42506: containerized-data-importer: golang.org/x/net/html: multiple issues when parsing HTML files"), ("1272064", "VUL-0: CVE-2026-56852: containerized-data-importer: golang.org/x/text/unicode/norm: infinite loop on truncated/invalid UTF-8 input"), ("1276687", "VUL-0: CVE-2026-41178: containerized-data-importer,containerized-data-importer1.66: go.opentelemetry.io/otel/baggage: no rejection of raw-length headers in baggage parsing allows for DoS via oversized inputs"), ("1278621", "VUL-0: CVE-2026-56855,CVE-2026-56854,CVE-2026-78662: containerized-data-importer: golang.org/x/crypto/ssh: authentication bypass and deadlocks in the crypto/ssh library")]
jira: []
packages: [("15-SP7", [("containerized-data-importer-api", "1.64.0-150700.9.14.1"), ("containerized-data-importer-cloner", "1.64.0-150700.9.14.1"), ("containerized-data-importer-controller", "1.64.0-150700.9.14.1"), ("containerized-data-importer-importer", "1.64.0-150700.9.14.1"), ("containerized-data-importer-manifests", "1.64.0-150700.9.14.1"), ("containerized-data-importer-operator", "1.64.0-150700.9.14.1"), ("containerized-data-importer-uploadproxy", "1.64.0-150700.9.14.1"), ("containerized-data-importer-uploadserver", "1.64.0-150700.9.14.1"), ("obs-service-cdi_containers_meta", "1.64.0-150700.9.14.1")])]
composed: []
update_repos: [("SystemProduct { name: \"sle-module-containers\", version: \"15-SP7\", arch: \"aarch64\" }", "http://download.suse.de/ibs/SUSE:/Maintenance:/46572/SUSE_Updates_SLE-Module-Containers_15-SP7_aarch64"), ("SystemProduct { name: \"sle-module-containers\", version: \"15-SP7\", arch: \"x86_64\" }", "http://download.suse.de/ibs/SUSE:/Maintenance:/46572/SUSE_Updates_SLE-Module-Containers_15-SP7_x86_64"), ("SystemProduct { name: \"sle-module-development-tools-obs\", version: \"15-SP7\", arch: \"x86_64\" }", "http://download.suse.de/ibs/SUSE:/Maintenance:/46572/SUSE_Updates_SLE-Module-Development-Tools-OBS_15-SP7_x86_64")]
