crates/mtui-testreport/tests/snapshots/it__ingest__ingest_golden_SUSE_SLFO_1.2_7787.snap
---
source: crates/mtui-testreport/tests/ingest.rs
expression: projection(report.base())
---
rrid: Some(RequestReviewID { project: "SUSE", kind: Slfo, maintenance_id: "1.2", review_id: 7787 })
realid: Some("SUSE:SLFO:1.2:7787")
packager: "someone@suse.com"
rating: Some("critical")
category: "security"
repository: "http://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787/"
products: ["SLE-BCI 16.0 (aarch64, ppc64le, s390x, x86_64)", "SLES 16.0 (aarch64, ppc64le, s390x, x86_64)", "SLES-SAP 16.0 (ppc64le, x86_64)"]
testplatforms: ["base=BCI(major=16,minor=0);arch=[aarch64,ppc64le,s390x,x86_64]", "base=SLES(major=16,minor=0);arch=[aarch64,ppc64le,s390x,x86_64]", "base=SLES_SAP(major=16,minor=0);arch=[ppc64le,x86_64]"]
giteapr: Some("https://src.suse.de/products/SLFO/pulls/7787")
giteaprapi: Some("https://src.suse.de/api/v1/repos/products/SLFO/pulls/7787")
giteacohash: Some("189e66a253b057292a1f79f174c37653c83eaff622401194d3de5df460aea44c")
update_source: Git
slack_review: None
reviewer: ""
repositories: ["https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-aarch64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-ppc64le", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-s390x", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-x86_64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-aarch64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-ppc64le", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-s390x", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-x86_64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-SAP-16.0-ppc64le", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-SAP-16.0-x86_64"]
hostnames: []
bugs: [("1273133", "VUL-0: CVE-2026-11770: 389-ds: pre-auth LDAP filter injection in CleanAllRUV status check"), ("1279572", "VUL-0: CVE-2026-18453: 389-ds: 389-ds-base: 389-ds-base: pre-authentication NULL pointer dereference via paged results and USE_ONE_BACKEND control in op_shared_search"), ("1279864", "VUL-0: CVE-2026-18355: 389-ds: heap buffer overflow in the SASL I/O layer allows a remote authenticated attacker to cause a denial of service or potentially achieve remote code execution"), ("1279865", "VUL-0: CVE-2026-18922: 389-ds: stale identity carried in a Cyrus SASL auxiliary property during SASL PLAIN authentication allows unauthenticated attackers to achieve privilege escalation to Directory Manager"), ("1279866", "VUL-0: CVE-2026-19843: 389-ds: unescaped LDAP DN in Cockpit 389 Console LDAP editor allows an LDAP user with delegated privileges to execute shell commands with root privileges on the directory server host"), ("1279867", "VUL-0: CVE-2026-76560: 389-ds: incorrect matching in the SELFDN ACI bind-rule evaluator allows an anonymous LDAP client to bypass access controls on directory entries containing empty SELFDN attributes")]
jira: []
packages: [("standard", [("389-ds", "3.0.7~git2.2846d5288-999999_stage.1.1"), ("389-ds-devel", "3.0.7~git2.2846d5288-999999_stage.1.1"), ("389-ds-snmp", "3.0.7~git2.2846d5288-999999_stage.1.1"), ("lib389", "3.0.7~git2.2846d5288-999999_stage.1.1"), ("libsvrcore0", "3.0.7~git2.2846d5288-999999_stage.1.1")])]
composed: [("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"aarch64\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"ppc64le\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"s390x\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"x86_64\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"aarch64\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"ppc64le\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"s390x\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"x86_64\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES-SAP\", version: \"16.0\", arch: \"ppc64le\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES-SAP\", version: \"16.0\", arch: \"x86_64\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES_SAP\", version: \"16.0\", arch: \"ppc64le\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"]), ("SystemProduct { name: \"SLES_SAP\", version: \"16.0\", arch: \"x86_64\" }", ["389-ds", "389-ds-devel", "389-ds-snmp", "lib389", "libsvrcore0"])]
update_repos: [("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"aarch64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-aarch64"), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"ppc64le\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-ppc64le"), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"s390x\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-s390x"), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"x86_64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLE-BCI-16.0-x86_64"), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"aarch64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-aarch64"), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"ppc64le\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-ppc64le"), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"s390x\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-s390x"), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"x86_64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-16.0-x86_64"), ("SystemProduct { name: \"SLES_SAP\", version: \"16.0\", arch: \"ppc64le\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-SAP-16.0-ppc64le"), ("SystemProduct { name: \"SLES_SAP\", version: \"16.0\", arch: \"x86_64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7787:/SLES/product/repo/SLES-SAP-16.0-x86_64")]
