crates/mtui-testreport/tests/snapshots/it__ingest__ingest_golden_SUSE_SLFO_1.2_7810.snap
---
source: crates/mtui-testreport/tests/ingest.rs
expression: projection(report.base())
---
rrid: Some(RequestReviewID { project: "SUSE", kind: Slfo, maintenance_id: "1.2", review_id: 7810 })
realid: Some("SUSE:SLFO:1.2:7810")
packager: "someone@suse.com"
rating: Some("important")
category: "security"
repository: "http://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810/"
products: ["SLE-BCI 16.0 (aarch64, x86_64)", "SLES 16.0 (aarch64, x86_64)", "SLES-SAP 16.0 (x86_64)"]
testplatforms: ["base=BCI(major=16,minor=0);arch=[aarch64,x86_64]", "base=SLES(major=16,minor=0);arch=[aarch64,x86_64]", "base=SLES_SAP(major=16,minor=0);arch=[x86_64]"]
giteapr: Some("https://src.suse.de/products/SLFO/pulls/7810")
giteaprapi: Some("https://src.suse.de/api/v1/repos/products/SLFO/pulls/7810")
giteacohash: Some("00319d3cb42e221157205765000f74904103bba7df44fe7dc1b8445141be6358")
update_source: Git
slack_review: None
reviewer: ""
repositories: ["https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLE-BCI-16.0-aarch64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLE-BCI-16.0-x86_64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLES-16.0-aarch64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLES-16.0-x86_64", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLES-SAP-16.0-x86_64"]
hostnames: []
bugs: [("1253357", "L3: Sle-Micro 6.x is missing the latest version of google-guest-oslogin"), ("1272118", "VUL-0: CVE-2026-56852: google-cloud-sap-agent,google-guest-agent,google-osconfig-agent: golang.org/x/text/unicode/norm: infinite loop on truncated/invalid UTF-8 input"), ("1278597", "VUL-0: CVE-2026-56855,CVE-2026-56854,CVE-2026-78662: google-guest-agent,google-osconfig-agent: golang.org/x/crypto/ssh: authentication bypass and deadlocks in the crypto/ssh library"), ("1278967", "VUL-0: CVE-2026-84445: google-osconfig-agent,google-guest-agent: google.golang.org/grpc: DoS via crash due to missing ':authority' and 'Host' headers in gRPC-Go xDS servers"), ("1279297", "VUL-0: CVE-2026-84303: google-guest-agent,google-osconfig-agent: google.golang.org/grpc: xDS RBAC HTTP filter implementation issue allows for bypass of authorization policies via mixed-case or canonical-case header matches"), ("1279414", "VUL-0: CVE-2026-84304: google-guest-agent,google-osconfig-agent: google.golang.org/grpc: heap memory exhaustion via HTTP/2 DATA frame fragmentation")]
jira: []
packages: [("standard", [("google-guest-agent", "20260903.01-999999_stage.2.1")])]
composed: [("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"aarch64\" }", ["google-guest-agent"]), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"x86_64\" }", ["google-guest-agent"]), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"aarch64\" }", ["google-guest-agent"]), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"x86_64\" }", ["google-guest-agent"]), ("SystemProduct { name: \"SLES-SAP\", version: \"16.0\", arch: \"x86_64\" }", ["google-guest-agent"]), ("SystemProduct { name: \"SLES_SAP\", version: \"16.0\", arch: \"x86_64\" }", ["google-guest-agent"])]
update_repos: [("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"aarch64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLE-BCI-16.0-aarch64"), ("SystemProduct { name: \"SLE-BCI\", version: \"16.0\", arch: \"x86_64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLE-BCI-16.0-x86_64"), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"aarch64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLES-16.0-aarch64"), ("SystemProduct { name: \"SLES\", version: \"16.0\", arch: \"x86_64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLES-16.0-x86_64"), ("SystemProduct { name: \"SLES_SAP\", version: \"16.0\", arch: \"x86_64\" }", "https://download.suse.de/ibs/SUSE:/SLFO:/1.2:/PullRequest:/7810:/SLES/product/repo/SLES-SAP-16.0-x86_64")]
